--- a/Moveonthing/Agileproject/MOT/templates/sinhvien.html
+++ b/Moveonthing/Agileproject/MOT/templates/sinhvien.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="static/studentInfo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <title>Select Subject</title>
     <script>
-        $(document).ready(function() {
-            $('.search-bar').on('input', function() {
+        $(document).ready(function () {
+            $('.search-bar').on('input', function () {
                 let query = $(this).val();
-                $.get("{% url 'SearchSinhVien' %}?query=" + query, function(data) {
+                $.get("{% url 'SearchSinhVien' %}?query=" + query, function (data) {
                     $('tbody').empty();
-                    $.each(data, function(index, sv) {
+                    $.each(data, function (index, sv) {
                         $('tbody').append(
                             `<tr>
                                 <td>${sv.mssv}</td>
@@ -34,10 +39,12 @@
         });
     </script>
 </head>
+
 <body>
     <div class="container">
         <nav class="sidebar">
-            <h2><img src="./static/images/icon-.png" style="width: 24px; height: 24px; vertical-align: middle;" /> HI ADMIN</h2>
+            <h2><img src="./static/images/icon-.png" style="width: 24px; height: 24px; vertical-align: middle;" /> HI
+                ADMIN</h2>
             <a class="active" href="{% url 'Homepage' %}"><i class="fa fa-home"></i> Trang chủ</a>
             <a href="sinhvien"><i class="fa fa-user"></i> Sinh viên</a>
             <a href="studentPoint"><i class="fa fa-book"></i> Quản lý nhập điểm</a>
@@ -46,12 +53,13 @@
             <img src="./static/images/logo.png" alt="Logo" class="logo">
         </nav>
 
-        <div class="content" >
+        <div class="content">
             <div class="events">
                 <div class="event">
                     <div class="header-icons">
-                        <form method="GET" action="{% url 'Sinhvien' %}">
-                            <input type="text" name="search" placeholder="Mssv hoặc Họ tên..." class="search-bar" style="width: 400px;" value="{{ search_query }}">
+                        <form method="GET" action="">
+                            <input type="text" name="search" placeholder="Mssv hoặc Họ tên..." class="search-bar"
+                                style="width: 400px;" value="{{ search_query }}">
                             {% comment %} <span class='icon'><i class="fa fa-search"></i></span> {% endcomment %}
                         </form>
                     </div>
@@ -59,26 +67,52 @@
             </div>
             <div class="table-container">
                 <h3 class="title-table">THÔNG TIN SINH VIÊN</h3>
-                    <table>
+                <table>
                     <thead>
                         <tr>
-                        <th>Mã Sinh Viên</th>
-                        <th>Họ và Tên</th>
-                        <th>Ngày Sinh</th>
-                        <th>Số Điện Thoại</th>
-                        <th>Mã Lớp</th>
-                        <th>Tùy chọn</th>
+                            <th>Mã Sinh Viên</th>
+                            <th>Họ và Tên</th>
+                            <th>Ngày Sinh</th>
+                            <th>Số Điện Thoại</th>
+                            <th>Mã Lớp</th>
+                            <th>Tùy chọn</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for sinhvien in danh_sach_sinh_vien %}
+                        <tr>
+                            <td>{{sinhvien.mssv}}</td>
+                            <td>{{sinhvien.hotensv}}</td>
+                            <td>{{sinhvien.ngaysinh|date:"d-m-Y"}}</td>
+                            <td>{{sinhvien.sodienthoai}}</td>
+                            <td>{{sinhvien.malop.malop}}</td>
+                            <td>
+                                <button><i class="fa fa-info-circle"></i></button>
+                                <button><i class="fa fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
-                    </table>
-                    <div class="btn-add">
-                        <button><i class="fa fa-add"></i></button>
-                    </div>
+                </table>
+                <div class="btn-add">
+                    <a href="#ex1" rel="modal:open"><button class="btn-add"><i class="fa fa-add"></i></button></a>
+                </div>
             </div>
+
+            <div id="ex1" class="modal">
+                <h3>Thông tin sinh viên</h3>
+                <form method="POST" action="sinhvien">
+                    {% csrf_token %}
+                    <div class="form-flex">
+                        <input type="text" placeholder="Mã số sinh viên" name="mssv" required>
+                        <input type="text" placeholder="Họ và tên" name="hotensv" required>
+                        <input type="date" placeholder="mssv" name="ngaysinh" required>
+                        <input type="text" placeholder="Số điện thoại" name="sodienthoai" required>
+                        <input class="btn-submit-form" type="submit" value="Thêm sinh viên">
+                    </div>
+                </form>
+            </div>
+            
         </div>
     </div>
-</body>  
-
-
+</body>
