--- a/Moveonthing/Agileproject/MOT/templates/sinhvien.html
+++ b/Moveonthing/Agileproject/MOT/templates/sinhvien.html
@@ -47,6 +47,7 @@
                 ADMIN</h2>
             <a class="active" href="{% url 'Homepage' %}"><i class="fa fa-home"></i> Trang chủ</a>
             <a href="sinhvien"><i class="fa fa-user"></i> Sinh viên</a>
+            <a href="educationprogram"><i class="fa-solid fa-list"></i> Chương trình đào tạo</a>
             <a href="studentPoint"><i class="fa fa-book"></i> Quản lý nhập điểm</a>
             <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
             <a href="{% url 'Logout' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
