--- a/Moveonthing/Agileproject/MOT/templates/resetPassword.html
+++ b/Moveonthing/Agileproject/MOT/templates/resetPassword.html
@@ -6,19 +6,40 @@
         <title>Reset Password</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="static/forgotPassword.css" rel="stylesheet"/>
+        <link href="/static/forgotPassword.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     </head>
     <body class='container'>
         <!--Header-->
-        <div class="screen-20">
-            <div class="header">
-                <span><b>TRƯỜNG ĐẠI HỌC ABC</b></span>
-                <span style="font-size: medium;"><b>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</b></span>
-                <span style="font-size: medium;"><b>Điện thoại: 0123456789</b></span>
-            </div>
+        <div >
+            <div class="header-container">
+                <div class="logo-container">
+                  <img src="./static/images/logo.png" alt="Logo" class="logo">
+                </div>
+                  <!-- Thanh thông báo đầu trang -->
+                <div class="header-top">
+                    <div class="title">M O V E  O N  T H I N G</div>
+                    <div class="sub-title">
+                      <i class="fab fa-facebook"></i> <!-- Biểu tượng Facebook -->
+                      <i class="fab fa-instagram"></i> <!-- Biểu tượng Instagram -->
+                      <i class="fab fa-google"></i> <!-- Biểu tượng Google -->
+                      <a class="login" href="{% url 'Login' %}"><i class="fas fa-user" style="border-right: 1px solid #ccc; padding-right: 10px;"></i>ĐĂNG NHẬP</a>
+                    </div>
+                </div>
+              </div>
+              <div>
+                <ul class="menu">
+                    <li style="margin-left: 20%;"><a class="active" href="{% url 'Agile' %}">Trang Chủ</a></li>
+                    <li><a href="#news">Giới Thiệu</a></li>
+                    <li><a href="#contact">Tin Tức - Sự Kiện</a></li>
+                    <li><a href="#">Tuyển Sinh</a></li>
+                    <li><a href="#">Đào Tạo</a></li>
+                    <input  s type="search" placeholder="What can we help you find?">
+                  </ul>
+              </div>
         </div>
         <!--Body-->
         <div class='container-body'>
@@ -42,61 +63,8 @@
                         {% endif %}
                     </div>
                 </form>
+            </div>
         </div>
-              
-       
-        <!--Script-->
-        {% comment %} <script>
-            document.getElementById("password").addEventListener("input", function() {
-                hideErrorMessage();
-            });
-
-
-            $(document).ready(function() {
-                // Kiểm tra mật khẩu khi người dùng nhập
-                $('#password').on('input', function() {
-                    var password = $(this).val();
-                    if (password.length < 8 || !(/[A-Z]/.test(password)) || !(/[!@#$%^&*()_+]/.test(password))) {
-                        $('.form-message').text('Mật khẩu phải có ít nhất 1 ký tự ghi hoa, 1 ký tự đặc biệt');
-                    } else {
-                        $('.form-message').text('');
-                    }
-                });
-            });
-
-            function displayErrorMessage() {
-                var message = document.querySelector(".form-message");
-                var password = $('#password').val();
-                if(password != null) {
-                    message.innerText=""
-                } else {
-                message.innerText = "Vui lòng nhập mật khẩu";
-                message.style.color='red';
-                }
-            }
-            
-            // Hàm ẩn thông báo
-            function hideErrorMessage() {
-                var message = document.querySelector(".form-message");
-                message.innerText = ""; // Xóa nội dung thông báo
-                
-            }
-
-            function displayErrorMessage_confirmPW() {
-                var message = document.querySelector(".confirm-message");
-                message.innerText = "Vui lòng nhập lại mật khẩu";
-            }
-   
-            function checkPasswordMatch() {
-                var password = $('#password').val();
-                var confirmPassword = $('#confirm-pw').val();
     
-                if (password === confirmPassword) {
-                    $('.confirm-message').text('');
-                } else {
-                    $('.confirm-message').text('Mật khẩu nhập lại không khớp');
-                }
-            }
-        </script> {% endcomment %}
     </body>
 </html>
